@@ -26,14 +26,11 @@ Stuff to do before 0.5 release:
 * version number needs to be centralized, its currently in the man
   pages, in xboxdrv, in the TODO and in xboxdrv-daemon
 
-* a mouse needs mouse buttons to be recognized as mouse:
-
- --ui-buttonmap a=BTN_LEFT,b=BTN_RIGHT,x=BTN_MIDDLE,y=KEY_ENTER  
-
 * src/xbox_controller.cpp:71: Make endpoint variable
   http://ubuntuforums.org/showthread.php?p=7538167#post7538167
 
-* add a way to not create a joystick/event device
+* add a way to not create a joystick/event device and figure out why
+  it currently gets created at all
 
 
 * figure out a way to make userspace force feedback driver not become dead processes
