@@ -6,6 +6,8 @@ xboxdrv 0.4.14 - (??/Mai/2010)
 * added shifting to --ui-buttonmap, allows sending of different events
   when a shift button is pressed
 * added --mouse, a simple shortcut to enable mouse emulation
+* added dummy events to the mouse device to let it register properly
+  by the kernel
 
 
 xboxdrv 0.4.13 - (13/Mai/2010)
